<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Strive</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_legal_notice">Legal Notice</string>
    <string name="exercise_jogging">Jogging</string>
    <string name="exercise_biking">Biking</string>
    <string name="main_hub_button_text">Main Hub</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="revoke_access_button_text">Revoke Access</string>
    <string name="start_chronometer_button_text">Start</string>
    <string name="pause_chronometer_button_text">Pause</string>
    <string name="end_chronometer_button_text">End</string>
    <string name="reset_chronometer_button_text">Reset</string>
    <string name="main_hub_frag1">Exercises</string>
    <string name="main_hub_frag2">Leaderboards</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="total_time_elapsed">Total time elapsed:</string>
    <string name="total_distance">Total Distance:</string>
    <string name="signed_out_status">Signed Out</string>
    <string name="greeting_status">Welcome</string>
    <string name="title_activity_main_hub">MainHubActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_jogging">JoggingActivity</string>
    <string name="title_activity_biking">BikingActivity</string>

</resources>
