<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/strive_background"
    tools:context=".MainSignInActivity" >

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/sign_out_button_text" />

    <Button
        android:id="@+id/revokeAccessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signOutButton"
        android:text="@string/revoke_access_button_text" />

    <Button
        android:id="@+id/mainHubButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/revokeAccessButton"
        android:layout_below="@+id/revokeAccessButton"
        android:text="@string/main_hub_button_text" />
    
</RelativeLayout>