<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JoggingActivity" >
    
    <fragment 
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/startButton"
        android:text="@string/pause_chronometer_button_text" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/pauseButton"
        android:text="@string/end_chronometer_button_text" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stopButton"
        android:layout_alignRight="@+id/map"
        android:text="@string/reset_chronometer_button_text" />

    <TextView
        android:id="@+id/clockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/pauseButton" />
    
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/stopButton"
        android:text="Share on Google+" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeElapsedTextView"
        android:layout_alignTop="@+id/clockTextView"
        android:layout_marginTop="12dp"
        android:text="@string/start_chronometer_button_text" />

    <TextView
        android:id="@+id/timeElapsedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map"
        android:layout_below="@+id/pauseButton"
        android:text="@string/total_time_elapsed" />

    <Button
        android:id="@+id/saveStatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/shareButton"
        android:layout_toRightOf="@+id/stopButton"
        android:text="Save Stats" />

    <TextView
        android:id="@+id/totalDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shareButton"
        android:layout_alignLeft="@+id/shareButton"
        android:text="@string/total_distance" />

    <TextView
        android:id="@+id/elapsedTimeDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timeElapsedTextView"
        android:layout_alignBottom="@+id/timeElapsedTextView"
        android:layout_alignLeft="@+id/stopButton"
        android:text="elap" />

    <TextView
        android:id="@+id/totalDistanceDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalDistanceTextView"
        android:layout_alignBottom="@+id/totalDistanceTextView"
        android:layout_alignLeft="@+id/elapsedTimeDisplayTextView"
        android:text="totD" />

</RelativeLayout>
